# DjangoRestExample

./: README.md  manage.py  pyproject.toml
django_rest_example/: asgi.py  settings.py  urls.py  wsgi.py
