[tool.poetry]
name = "djangorestexample"
version = "0.1.0"
description = ""
authors = ["Philip Michaelsen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
